# Zayronx-Consultas

./: LICENSE.txt  README.md  cpf.php  main.py  pyproject.toml  replit.nix  requirements.txt  users.json  visits.html
templates/: 404.html  admin.html  cpf.php  cpf2.html  cpf3.html  cpf4.html  cpf5.html  cpflv.html  dashboard.html  datanome.html  fotor.html  ip.html  login.html  nome.html  nome2.html  nomelv.html  placa.html  placalv.html  planos.html  tel.html  tellv.html  visitas.html
