[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "colorama>=0.4.6",
    "flask-moment>=1.0.6",
    "flask>=3.1.0",
    "pyjwt>=2.10.1",
    "requests>=2.32.3",
    "waitress>=3.0.2",
    "flask-sslify>=0.1.5",
    "flask-wtf>=1.2.2",
    "bleach>=6.2.0",
    "flask-limiter>=3.10.1",
    "werkzeug>=3.1.3",
]
